--- a/data/compile.ipynb
+++ b/data/compile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'shortTermDebt', 'currentNetReceivables', 'incomeTaxExpense', 'incomeBeforeTax', 'netIncome', 'goodwill', 'longTermInvestments', 'otherCurrentLiabilities', 'totalCurrentAssets', 'researchAndDevelopment', 'totalRevenue', 'totalNonCurrentLiabilities', 'depreciation', 'totalNonCurrentAssets', 'treasuryStock', 'costOfRevenue', 'intangibleAssetsExcludingGoodwill', 'grossProfit', 'comprehensiveIncomeNetOfTax', 'fiscalDateEnding', 'investments', 'totalShareholderEquity', 'shortTermInvestments', 'deferredRevenue', 'retainedEarnings', 'propertyPlantEquipment', 'operatingExpenses', 'depreciationAndAmortization', 'capitalLeaseObligations', 'totalCurrentLiabilities', 'commonStockSharesOutstanding', 'interestAndDebtExpense', 'accumulatedDepreciationAmortizationPPE', 'intangibleAssets', 'ebitda', 'currentAccountsPayable', 'cashAndShortTermInvestments', 'longTermDebtNoncurrent', 'otherCurrentAssets', 'currentLongTermDebt', 'otherNonCurrentLiabilities', 'otherNonCurrrentAssets', 'costofGoodsAndServicesSold', 'nonInterestIncome', 'sellingGeneralAndAdministrative', 'cashAndCashEquivalentsAtCarryingValue', 'shortLongTermDebtTotal', 'interestExpense', 'investmentIncomeNet', 'inventory', 'operatingIncome', 'netIncomeFromContinuingOperations', 'ebit', 'commonStock', 'reportedCurrency', 'totalAssets', 'currentDebt', 'netInterestIncome', 'longTermDebt', 'interestIncome', 'totalLiabilities', 'otherNonOperatingIncome'}\n"
+      "{'longTermDebtNoncurrent', 'treasuryStock', 'otherNonCurrrentAssets', 'fiscalDateEnding', 'nonInterestIncome', 'shortLongTermDebtTotal', 'depreciation', 'longTermDebt', 'otherNonOperatingIncome', 'totalNonCurrentLiabilities', 'interestAndDebtExpense', 'costOfRevenue', 'cashAndShortTermInvestments', 'propertyPlantEquipment', 'totalAssets', 'longTermInvestments', 'goodwill', 'totalCurrentLiabilities', 'otherCurrentAssets', 'currentAccountsPayable', 'deferredRevenue', 'otherNonCurrentLiabilities', 'accumulatedDepreciationAmortizationPPE', 'reportedCurrency', 'totalLiabilities', 'commonStockSharesOutstanding', 'incomeTaxExpense', 'investmentIncomeNet', 'investments', 'depreciationAndAmortization', 'ebit', 'retainedEarnings', 'operatingExpenses', 'inventory', 'totalShareholderEquity', 'netIncomeFromContinuingOperations', 'capitalLeaseObligations', 'totalNonCurrentAssets', 'grossProfit', 'totalRevenue', 'ebitda', 'currentLongTermDebt', 'interestIncome', 'otherCurrentLiabilities', 'netIncome', 'shortTermInvestments', 'currentDebt', 'intangibleAssets', 'operatingIncome', 'incomeBeforeTax', 'intangibleAssetsExcludingGoodwill', 'sellingGeneralAndAdministrative', 'comprehensiveIncomeNetOfTax', 'cashAndCashEquivalentsAtCarryingValue', 'researchAndDevelopment', 'interestExpense', 'totalCurrentAssets', 'commonStock', 'currentNetReceivables', 'costofGoodsAndServicesSold', 'shortTermDebt', 'netInterestIncome'}\n"
      ]
     }
    ],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -178,8 +178,8 @@
      "output_type": "stream",
      "text": [
       "471 476 479 471 478 482 483 488 490 489 490 490 \n",
-      "416 {'LOW', 'MTB', 'BRO', 'K', 'UAA', 'CNC', 'OTIS', 'FTV', 'ADSK', 'MAA', 'ADM', 'FBHS', 'CHTR', 'ADP', 'XOM', 'TGT', 'ABT', 'MU', 'PNR', 'ATVI', 'ILMN', 'J', 'MMM', 'ANTM', 'IPG', 'NVR', 'CL', 'MAR', 'ITW', 'PPG', 'FDS', 'JPM', 'ROST', 'UNH', 'VLO', 'SRE', 'AES', 'ICE', 'ROP', 'KMX', 'MCHP', 'MDT', 'ECL', 'AMD', 'NDSN', 'GE', 'GM', 'SPG', 'DTE', 'EIX', 'AAPL', 'SO', 'JBHT', 'AIG', 'MO', 'ETN', 'WMT', 'AMP', 'PEG', 'PFG', 'APH', 'VRSK', 'EOG', 'MAS', 'ETR', 'IFF', 'ALB', 'CHD', 'TSLA', 'NI', 'TEL', 'NCLH', 'CAH', 'NWS', 'AXP', 'HAL', 'BXP', 'CRL', 'HES', 'BK', 'TFC', 'AEE', 'NFLX', 'IEX', 'IQV', 'GILD', 'SNA', 'VNO', 'VRSN', 'HBAN', 'NWSA', 'BIIB', 'APA', 'HON', 'ANSS', 'PNC', 'MKTX', 'KLAC', 'MTD', 'RMD', 'PSX', 'RE', 'UHS', 'ZBRA', 'BSX', 'DVA', 'EXPE', 'WEC', 'CCI', 'WAT', 'ROL', 'NWL', 'CPRT', 'DFS', 'NUE', 'FAST', 'MA', 'PEAK', 'IP', 'KR', 'CRM', 'DLR', 'GNRC', 'NLSN', 'MDLZ', 'PAYX', 'MCK', 'AKAM', 'CHRW', 'FRT', 'RJF', 'CLX', 'EBAY', 'GRMN', 'CMS', 'MTCH', 'INTC', 'HPE', 'AMAT', 'EMN', 'LNT', 'LRCX', 'EQR', 'CDNS', 'BKNG', 'HCA', 'IBM', 'DVN', 'COO', 'NLOK', 'XEL', 'KEYS', 'OGN', 'DISCA', 'TSCO', 'SIVB', 'TPR', 'IRM', 'VFC', 'L', 'RHI', 'SEDG', 'GLW', 'GD', 'AFL', 'SYK', 'MCO', 'PHM', 'KMI', 'PBCT', 'TRMB', 'ABBV', 'GL', 'GS', 'PH', 'CSX', 'AAL', 'PVH', 'T', 'CBRE', 'MNST', 'WAB', 'CMI', 'SCHW', 'UAL', 'CF', 'NSC', 'SBAC', 'WHR', 'CSCO', 'CTSH', 'QCOM', 'RCL', 'APD', 'HII', 'EPAM', 'BWA', 'MET', 'CE', 'PXD', 'UNP', 'CVX', 'XRAY', 'INTU', 'AON', 'CMCSA', 'CMA', 'PG', 'MRO', 'LH', 'NDAQ', 'CDW', 'PEP', 'FTNT', 'GOOGL', 'DRE', 'PTC', 'PM', 'TDY', 'TDG', 'NOW', 'DRI', 'APTV', 'AOS', 'CTRA', 'NOC', 'DE', 'MOS', 'NTRS', 'ORLY', 'AWK', 'ADBE', 'AME', 'PGR', 'BLL', 'URI', 'UPS', 'REGN', 'WYNN', 'BKR', 'ALL', 'C', 'TTWO', 'POOL', 'COST', 'IDXX', 'MKC', 'WBA', 'KO', 'PWR', 'CMG', 'RSG', 'JKHY', 'BDX', 'HAS', 'SYF', 'SHW', 'PLD', 'SLB', 'TRV', 'FE', 'MRK', 'KIM', 'WM', 'FFIV', 'MMC', 'FITB', 'FMC', 'JCI', 'MCD', 'IR', 'TYL', 'GOOG', 'BAX', 'BLK', 'HIG', 'PKI', 'ENPH', 'QRVO', 'HD', 'MPC', 'CZR', 'EW', 'CCL', 'STT', 'ANET', 'COF', 'NKE', 'JNJ', 'NEE', 'BAC', 'LEN', 'CTAS', 'WMB', 'NTAP', 'HSY', 'WRB', 'AJG', 'KEY', 'TMUS', 'RF', 'AMZN', 'ALLE', 'SBNY', 'FIS', 'DXCM', 'CB', 'USB', 'PAYC', 'TT', 'CTXS', 'BIO', 'SPGI', 'ETSY', 'MS', 'F', 'LDOS', 'EMR', 'PPL', 'OKE', 'ACN', 'EXR', 'FANG', 'RL', 'DGX', 'NEM', 'ABC', 'TMO', 'UDR', 'FB', 'O', 'COP', 'IT', 'TECH', 'LLY', 'YUM', 'SBUX', 'PSA', 'MGM', 'MSCI', 'LYV', 'IPGP', 'PRU', 'FDX', 'DHR', 'HST', 'SNPS', 'WTW', 'PYPL', 'STZ', 'EL', 'CNP', 'MSI', 'ARE', 'XYL', 'CAG', 'MLM', 'LHX', 'REG', 'PCAR', 'WDC', 'BA', 'RTX', 'PENN', 'KMB', 'LVS', 'GIS', 'CARR', 'STX', 'SYY', 'CVS', 'AZO', 'ALGN', 'CFG', 'PNW', 'DOV', 'EXPD', 'MPWR', 'ESS', 'DHI', 'GPC', 'AMGN', 'ISRG', 'LIN', 'ATO', 'LUMN', 'WFC', 'VTR', 'OMC', 'CTLT', 'IVZ', 'LMT', 'UA', 'SJM', 'AIZ', 'ALK', 'EQIX', 'WRK', 'FLT', 'JNPR', 'CEG', 'AVB', 'GWW', 'HSIC', 'AMT', 'D', 'AEP', 'EA', 'GPN', 'CBOE', 'EFX', 'ABMD', 'HLT', 'INFO', 'LYB', 'ORCL'}\n",
-      "80 {'VMC', 'HUM', 'TAP', 'WELL', 'KHC', 'BBWI', 'NVDA', 'HOLX', 'CTVA', 'INCY', 'TXT', 'LW', 'DISH', 'BR', 'ADI', 'DOW', 'DISCK', 'V', 'BMY', 'CERN', 'ES', 'CDAY', 'PFE', 'LUV', 'LKQ', 'FISV', 'TXN', 'WST', 'NXPI', 'AMCR', 'CI', 'DXC', 'BBY', 'TFX', 'MRNA', 'CAT', 'CME', 'PKG', 'DPZ', 'AAP', 'FOXA', 'STE', 'DD', 'VZ', 'FOX', 'ED', 'HPQ', 'NRG', 'SEE', 'ZION', 'TSN', 'ZTS', 'TJX', 'DAL', 'DUK', 'MSFT', 'ODFL', 'SWK', 'A', 'FCX', 'VRTX', 'FRC', 'BEN', 'EVRG', 'OXY', 'HWM', 'CINF', 'ROK', 'AVY', 'TER', 'DIS', 'LNC', 'WY', 'HRL', 'SWKS', 'EXC', 'ZBH', 'VTRS', 'MHK', 'TROW'}\n"
+      "416 {'CE', 'CMS', 'AES', 'FDX', 'CDNS', 'WRK', 'IPGP', 'KMI', 'ACN', 'ORCL', 'FMC', 'DHI', 'CHTR', 'CFG', 'J', 'AEE', 'ESS', 'MPWR', 'STX', 'SJM', 'ENPH', 'IVZ', 'UPS', 'USB', 'CTRA', 'KIM', 'MCD', 'BWA', 'AIG', 'JNJ', 'KMB', 'SPG', 'SNA', 'MRO', 'CVS', 'LMT', 'PTC', 'SYF', 'IEX', 'MKTX', 'CAG', 'AMZN', 'PFG', 'TTWO', 'APH', 'AWK', 'IRM', 'BIO', 'VRSK', 'WAB', 'CF', 'TGT', 'SBNY', 'MET', 'MO', 'HIG', 'L', 'RJF', 'CEG', 'JBHT', 'IQV', 'VFC', 'MOS', 'GILD', 'LLY', 'CMI', 'NWL', 'HLT', 'INTC', 'AMD', 'CB', 'PNW', 'PNR', 'ABMD', 'AAPL', 'ETR', 'TRV', 'MRK', 'UAA', 'ATVI', 'HON', 'ADM', 'AZO', 'CSCO', 'DGX', 'ETN', 'PRU', 'ICE', 'HAS', 'PNC', 'TDG', 'ADSK', 'LOW', 'SHW', 'BKR', 'HES', 'MTCH', 'MAA', 'NWSA', 'GM', 'ORLY', 'NKE', 'CLX', 'MDT', 'WFC', 'UNH', 'COP', 'MS', 'SO', 'EW', 'ARE', 'AMP', 'URI', 'NI', 'ADP', 'LRCX', 'PAYX', 'AME', 'DRE', 'GOOGL', 'GS', 'HD', 'EXPE', 'MTD', 'SEDG', 'FIS', 'WMB', 'BDX', 'IP', 'ILMN', 'NEM', 'COO', 'BLK', 'STZ', 'AKAM', 'GIS', 'ECL', 'EQIX', 'LH', 'LHX', 'VNO', 'EIX', 'CBOE', 'ALB', 'DLR', 'DOV', 'MDLZ', 'CTAS', 'FRT', 'CAH', 'MCK', 'NOC', 'ABC', 'PSA', 'GPC', 'NTAP', 'K', 'CHD', 'AEP', 'VRSN', 'ANSS', 'AJG', 'IT', 'PENN', 'TT', 'IPG', 'CSX', 'STT', 'EL', 'QCOM', 'PEP', 'MNST', 'GE', 'HII', 'OKE', 'SIVB', 'PSX', 'CNP', 'LIN', 'IR', 'DHR', 'CCL', 'CHRW', 'WHR', 'LUMN', 'COST', 'ZBRA', 'GLW', 'PEAK', 'WDC', 'GWW', 'DFS', 'FANG', 'NDAQ', 'IDXX', 'SYK', 'GRMN', 'WEC', 'GPN', 'RF', 'BIIB', 'MA', 'NWS', 'KO', 'KMX', 'BXP', 'MKC', 'F', 'WMT', 'BAC', 'VTR', 'BAX', 'LVS', 'PWR', 'GNRC', 'PYPL', 'ALL', 'AOS', 'HPE', 'IFF', 'MSI', 'DISCA', 'BA', 'YUM', 'NDSN', 'LYB', 'JNPR', 'CL', 'NTRS', 'AVB', 'EQR', 'WBA', 'ADBE', 'DVA', 'MGM', 'NFLX', 'WAT', 'JPM', 'CRM', 'MTB', 'NLSN', 'BLL', 'REGN', 'JKHY', 'PHM', 'FTV', 'KR', 'APD', 'GD', 'SCHW', 'EMN', 'TYL', 'CVX', 'FB', 'PBCT', 'RE', 'XRAY', 'ITW', 'CRL', 'BK', 'HSIC', 'AMAT', 'FLT', 'DE', 'CZR', 'AMT', 'NUE', 'AXP', 'PEG', 'ROP', 'HBAN', 'PVH', 'MAS', 'WM', 'EFX', 'SBUX', 'PPG', 'DTE', 'ISRG', 'PKI', 'SRE', 'FFIV', 'FITB', 'DRI', 'BRO', 'GL', 'EA', 'OMC', 'DVN', 'EPAM', 'TEL', 'SNPS', 'MLM', 'MU', 'ALLE', 'CTXS', 'BSX', 'PXD', 'APTV', 'KEYS', 'EOG', 'AFL', 'PLD', 'RSG', 'NLOK', 'T', 'BKNG', 'OGN', 'INTU', 'EXPD', 'PAYC', 'D', 'RL', 'MAR', 'MMC', 'RCL', 'C', 'FBHS', 'EMR', 'OTIS', 'MMM', 'TDY', 'CBRE', 'EBAY', 'UAL', 'INFO', 'SPGI', 'NEE', 'WYNN', 'PM', 'POOL', 'NVR', 'CDW', 'MCHP', 'CNC', 'ABBV', 'PCAR', 'TMUS', 'ANTM', 'VLO', 'ATO', 'NCLH', 'CMG', 'XYL', 'WTW', 'AMGN', 'MCO', 'AAL', 'CMA', 'HCA', 'KLAC', 'O', 'ETSY', 'ROST', 'RHI', 'NOW', 'REG', 'SYY', 'UA', 'LDOS', 'XOM', 'TSCO', 'ALK', 'CTLT', 'MPC', 'UDR', 'LEN', 'DXCM', 'TSLA', 'APA', 'FE', 'ANET', 'LNT', 'IBM', 'EXR', 'FTNT', 'PG', 'XEL', 'TRMB', 'COF', 'FAST', 'TPR', 'CMCSA', 'SLB', 'PPL', 'NSC', 'HST', 'PH', 'WRB', 'ROL', 'KEY', 'ALGN', 'UHS', 'TECH', 'PGR', 'AIZ', 'JCI', 'RTX', 'CCI', 'CTSH', 'HSY', 'RMD', 'ABT', 'GOOG', 'HAL', 'UNP', 'FDS', 'TFC', 'AON', 'MSCI', 'LYV', 'CPRT', 'TMO', 'SBAC', 'CARR', 'QRVO'}\n",
+      "80 {'TFX', 'FISV', 'FOXA', 'DISCK', 'FCX', 'LW', 'KHC', 'ES', 'MHK', 'DD', 'PFE', 'PKG', 'ROK', 'HOLX', 'BBY', 'WELL', 'MRNA', 'TSN', 'ZION', 'SWK', 'INCY', 'OXY', 'MSFT', 'NVDA', 'DIS', 'FOX', 'FRC', 'ADI', 'BBWI', 'TER', 'TXN', 'ZTS', 'ZBH', 'BR', 'SEE', 'TROW', 'TXT', 'CTVA', 'SWKS', 'TJX', 'CERN', 'TAP', 'LKQ', 'DISH', 'AMCR', 'VZ', 'DAL', 'EXC', 'EVRG', 'BMY', 'LUV', 'VRTX', 'AAP', 'HRL', 'DXC', 'V', 'LNC', 'BEN', 'ED', 'A', 'DOW', 'VTRS', 'CME', 'DUK', 'DPZ', 'AVY', 'STE', 'HUM', 'NRG', 'CDAY', 'ODFL', 'CINF', 'HWM', 'WY', 'HPQ', 'CAT', 'NXPI', 'WST', 'VMC', 'CI'}\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -306,8 +306,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
